Correctly aligning button

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -23,3 +23,9 @@ body { padding-top: 60px; }
 .pagination ul {
 width:700px;
 }
+
+form.navbar-search {
+  a.btn {
+    margin-top:0;
+  }
+}
